--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "discord.js": "^12.2.0",
     "express": "^4.17.1",
     "figlet": "^1.5.0",
-    "local": "^0.3.3",
+    "local": "^0.3.3"
     
   },
   "engines": {
